rog3: Edit Device image and URL for unofficial build
Change-Id: I9b6353e0d066b7f3fc3e76bfab60a83f718c1fb0

--- a/meta/config.json
+++ b/meta/config.json
@@ -1,6 +1,6 @@
 {
     "model": "ROG Phone 3",
-    "pageUrl":"https://dl.omnirom.org/rog3",
+    "pageUrl":"https://androidfilehost.com/?w=files&flid=320870",
     "make": "Asus",
     "image": "meta/device_image.jpg",
     "state": "unofficial",
