rog3: sensors: add udfps long press sensor
Change-Id: I8b65e3196a7d6f158f4ff589b9755cf7c7e51c92

--- a/prebuilt/system/etc/init/init.qcom.device.rc
+++ b/prebuilt/system/etc/init/init.qcom.device.rc
@@ -5,3 +5,8 @@ service vendor.vibrator-1-0 /system/bin/true
 
 service vendor.qti.vibrator /system/bin/true
     disabled
+
+on post-fs-data
+# FOD
+    chown system system /sys/devices/platform/goodix_ts.0/fod_pressed
+    chown system system /sys/devices/platform/goodix_ts.0/gesture/fp_wakeup
