rog3: sensors: Implement double tap sensor
Change-Id: I6c217c994d6e4d5ae062a31a44fffc9f097a7f6f

--- a/prebuilt/system/etc/init/init.qcom.device.rc
+++ b/prebuilt/system/etc/init/init.qcom.device.rc
@@ -9,4 +9,5 @@ service vendor.qti.vibrator /system/bin/true
 on post-fs-data
 # FOD
     chown system system /sys/devices/platform/goodix_ts.0/fod_pressed
+    chown system system /sys/devices/platform/goodix_ts.0/gesture/dclick
     chown system system /sys/devices/platform/goodix_ts.0/gesture/fp_wakeup
