--- a/fingerprint/android.hardware.biometrics.fingerprint@2.3-service.rog3.rc
+++ b/fingerprint/android.hardware.biometrics.fingerprint@2.3-service.rog3.rc
@@ -1,6 +1,7 @@
 on init
     # Goodix fingerprint
     chown system system /dev/goodix_fp
+    chown root system /sys/devices/platform/goodix_ts.0/test_keycode
 
 service fingerprint-inscreen-1-0 /system_ext/bin/hw/android.hardware.biometrics.fingerprint@2.3-service.rog3
     # "class hal" causes a race condition on some devices due to files created
