--- a/prebuilt/system/etc/init/init.qcom.device.rc
+++ b/prebuilt/system/etc/init/init.qcom.device.rc
@@ -2,3 +2,6 @@ on post-fs
 
 service vendor.vibrator-1-0 /system/bin/true
     disabled
+
+service vendor.qti.vibrator /system/bin/true
+    disabled
