--- a/vibrator/android.hardware.vibrator.service.rog3.rc
+++ b/vibrator/android.hardware.vibrator.service.rog3.rc
@@ -10,7 +10,7 @@ on post-fs
 on property:service.bootanim.exit=0
     write /sys/class/leds/vibrator/rtp_play_delay "60004 1000"
 
-service system.rog3.vibrator /system_ext/bin/hw/android.hardware.vibrator.service.rog3
+service vendor.rog3.vibrator /vendor/bin/hw/android.hardware.vibrator.service.rog3
     class hal
     user system
     group system input
