rog3: Replace custom fod_event by Asus test_keycode
Change-Id: I87367aa36faff9d9fc2d0ead437fc96104a42c77

--- a/fingerprint/android.hardware.biometrics.fingerprint@2.3-service.rog3.rc
+++ b/fingerprint/android.hardware.biometrics.fingerprint@2.3-service.rog3.rc
@@ -1,6 +1,7 @@
 on init
     # Goodix fingerprint
     chown system system /dev/goodix_fp
+    chown system system /sys/devices/platform/goodix_ts.0/test_keycode
 
 service vendor.fps_hal /vendor/bin/hw/android.hardware.biometrics.fingerprint@2.3-service.rog3
     # "class hal" causes a race condition on some devices due to files created
